--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ src/**/obj
 src/**/Makefile
 
 src/BlazorClient/appsettings.json
+src/ConsoleClient/appsettings.json
 src/SpectreClient/appsettings.json
 src/TerminalGuiClient/appsettings.json
