--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ src/**/Makefile
 
 src/BlazorClient/appsettings.json
 src/ConsoleClient/appsettings.json
+src/SenseHatGrpcClient/appsettings.json
 src/SpectreClient/appsettings.json
 src/TerminalGuiClient/appsettings.json
